# watchdog

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SPECS_REF  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
scripts/: codegen.py
src/eugene_plexus_watchdog/: __init__.py  __main__.py  app.py  auth_state.py  console_logging.py  dependencies.py  keyring_store.py  orphan_kill.py  security.py  settings.py  state.py  supervisor.py
src/eugene_plexus_watchdog/_generated/: __init__.py  common_models.py  models.py
src/eugene_plexus_watchdog/routes/: auth.py  components.py  config.py  health.py
tests/: conftest.py  test_auth.py  test_components.py  test_config.py  test_console_logging.py  test_health.py  test_keyring.py  test_orphan_kill.py  test_restart_on_login.py  test_supervisor.py
