[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eugene-plexus-watchdog"
version = "0.1.0"
description = "Process supervisor and UI host for Eugene Plexus. Outermost process of a personal install — spawns the body components, serves UI assets, owns topology config."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Eugene Plexus contributors" },
]
keywords = ["eugene-plexus", "watchdog", "supervisor", "fastapi", "consciousness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6.0,<7",
    # v0.2 security stack — watchdog is the install's trust root.
    "argon2-cffi>=23.1,<26",      # passphrase hash + master-key KDF
    "pyjwt>=2.10,<3",             # session/service token sign + verify
    "pynacl>=1.5,<2",             # libsodium secretbox for at-rest envelopes
    "keyring>=25.5,<26",          # OS Credential Manager / Keychain / Secret Service
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "httpx>=0.27,<1",
    "ruff==0.15.17",
    "mypy==2.1.0",
    "types-pyyaml>=6,<7",
    "datamodel-code-generator==0.63.0",
]

[project.scripts]
eugene-plexus-watchdog = "eugene_plexus_watchdog.__main__:main"

[project.urls]
Homepage = "https://github.com/eugene-plexus"
Repository = "https://github.com/eugene-plexus/watchdog"
Specs = "https://github.com/eugene-plexus/specs"

[tool.hatch.build.targets.wheel]
packages = ["src/eugene_plexus_watchdog"]

# -----------------------------------------------------------------------------
# Ruff (linter + formatter)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "src/eugene_plexus_watchdog/_generated",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "ASYNC",         # async-correctness
    "SIM",           # simplifications
    "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
# FastAPI dependency-injection idiom uses `Depends()` in argument
# defaults; B008's blanket "no function calls in defaults" is wrong
# for this pattern. Limited to the auth-dependencies file.
"src/eugene_plexus_watchdog/dependencies.py" = ["B008"]

# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
disable_error_code = ["call-arg"]
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = [
    "src/eugene_plexus_watchdog/_generated",
]

[[tool.mypy.overrides]]
module = "eugene_plexus_watchdog._generated.*"
ignore_errors = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
